asyncgit/src/gitui/tests/snapshots/gnostr_asyncgit__gitui__tests__unstage__unstage_removed_line.snap
---
source: src/gitui/tests/unstage.rs
expression: ctx.redact_buffer()
---
 On branch main                                                                 |
                                                                                |
 Unstaged changes (1)                                                           |
 modified   firstfile                                                           |
 @@ -1,3 +1,2 @@                                                                |
▌-testing                                                                       |
  weehooo                                                                       |
  blrergh                                                                       |
                                                                                |
 Staged changes (1)                                                             |
 modified   firstfile                                                           |
 @@ -1,2 +1,3 @@                                                                |
  testing                                                                       |
 -testtest                                                                      |
 +weehooo                                                                       |
 +blrergh                                                                       |
                                                                                |
 Recent commits                                                                 |
────────────────────────────────────────────────────────────────────────────────|
$ git apply --cached --reverse --recount                                        |
styles_hash: 2006d6b873154b82
